add politic, add footer

--- a/scss/global/_global.scss
+++ b/scss/global/_global.scss
@@ -7,6 +7,11 @@ body {
   &.lock {
     overflow: hidden;
   }
+
+  &.--light {
+    background-color: #fff;
+    color: #121010;
+  }
 }
 
 .container {
