--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding-bottom: 309px;
+  padding-bottom: 60px;
   position: relative;
 
   &__decore {
@@ -36,8 +36,7 @@
     width: 100%;
     max-width: 1042px;
     margin: 0 auto;
-    background-color: rgba(32, 28, 28, 0.5);
-    backdrop-filter: blur(25px);
+
     border-radius: 10px 0px 0px 0px;
   }
 
@@ -47,11 +46,32 @@
     display: flex;
     border-radius: 10px 0px 0px 0px;
     overflow: hidden;
+    margin-bottom: 20px;
+  }
+
+  &__pics {
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+
+  &__pic {
+    border-radius: 10px 0px 0px 10px;
+    overflow: hidden;
+    display: flex;
+  }
+
+  &__map {
   }
 
   &__content {
     padding: 56px;
     text-align: center;
+    background-color: rgba(32, 28, 28, 0.5);
+    backdrop-filter: blur(25px);
+    margin-bottom: 100px;
   }
 
   &__title {
@@ -85,12 +105,97 @@
     margin: 0 auto;
     max-width: 420px;
   }
+
+  &__social {
+    width: 100%;
+    max-width: 1800px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    z-index: 3;
+  }
+
+  &__social-item {
+    display: flex;
+    align-items: flex-end;
+    height: fit-content;
+  }
+
+  &__logo {
+    margin-right: 73px;
+  }
+
+  &__social-content {
+  }
+
+  &__social-title {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 130%; /* 20.8px */
+    margin-bottom: 18px;
+  }
+
+  &__social-elems {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 10px;
+  }
+
+  &__social-elem {
+    display: flex;
+    align-items: center;
+
+    svg {
+      max-width: 18px;
+      width: 100%;
+      margin-right: 10px;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+
+  &__social-links {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+  }
+
+  &__social-link {
+    font-size: 14px;
+    text-decoration-line: underline;
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 @media (max-width: 1000px) {
   .footer {
     &__img {
       height: 300px;
+    }
+
+    &__social {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__pic {
+      height: 250px;
+    }
+
+    &__social-item {
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
@@ -108,6 +213,23 @@
         font-size: 16px;
       }
     }
+
+    &__social-elems {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .footer {
+    &__pics {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    &__pic {
+      &:nth-child(3) {
+        grid-column: 1/3;
+      }
+    }
   }
 }
 
@@ -115,6 +237,28 @@
   .footer {
     &__title {
       font-size: 24px;
+    }
+  }
+}
+
+@media (max-width: 475px) {
+  .footer {
+    &__social-item {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__logo {
+      margin-right: 0;
+      margin-bottom: 30px;
+    }
+
+    &__pics {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    &__pic {
+      &:nth-child(3) {
+        grid-column: 1/2;
+      }
     }
   }
 }
